--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
     main.addEventListener('click', function(event) {
       alert('I was clicked!')
     })
-    
+
+
+    const input = document.querySelector('input')
+ 
+    input.addEventListener('keydown', function(e) {
+      console.log(e.which)
+    })
     </script>
   </body>
 </html>
