--- a/index.html
+++ b/index.html
@@ -37,5 +37,19 @@
         </div>
       </div>
     </div>
+    <script>
+    const main = document.getElementById('main')
+
+    main.addEventListener('click', function(event) {
+      alert('I was clicked!')
+    })
+
+
+    const input = document.querySelector('input')
+
+    input.addEventListener('keydown', function(e) {
+      console.log(e.which)
+    })
+    </script>
   </body>
 </html>
